--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
         <label for="input-date"><input class="input-date" type="date"></label>
         <button class="calculate-btn">Calulate</button>
         <p id="output"></p>
+        <footer>
+            <p>© | 2022 | yoursweetnightmare</p>
+            <ul class="list-non-bullet">
+                <li class="list-item-inline" ><a class="link" href="https://github.com/Rakezt">github</a> </li>
+                <li class="list-item-inline"><a class="link"
+                    href="https://twitter.com/LRakeshSingh">twitter</a></li>
+                <li class="list-item-inline" ><a class="link" href="https://www.linkedin.com/in/lrakeshsingh/">linkedin</a></li>
+             </ul>
+           </footer>
     </div>
 
     <script src="script.js"></script>
