--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Palindrome Birthday 🎂</h1>
         <label for="input-date"><input class="input-date" type="date"></label>
         <button class="calculate-btn">Calulate</button>
-        <p id="output"></p>
+        <p id="output">Result will be here</p>
         <footer>
             <p>© | 2022 | yoursweetnightmare</p>
             <ul class="list-non-bullet">
